# antifitnes

./: .env  .env.env  .gitignore  Dockerfile  bot.py  docker-compose.yml  env.py  manage.py  pyproject.toml  readme.md  requirements.txt
admin/: adm.py
app/: Dockerfile  env.py  requirements.txt
app/backend/: settings.py  urls.py
app/bot_app/: admin.py  forms.py  models.py  views.py
app_bot/: admin.py  models.py  views.py
app_bot/migrations/: 0001_initial.py
auth/: login.py  signup.py
backend/: settings.py  urls.py
backend/src/: db.sqlite3
backends/: settings.py  urls.py
bot/: .env  Dockerfile  bot.py  env.py  requirements.txt
bot/admin/: admin.py
bot/auth/: login.py
bot/db/: db_profile.py  db_standards.py  db_statistics.py  db_stats.py  router.py
bot/profile/: profile.py
bot/records/: records.py
bot/schedules/: schedule.py  training_session.py
bot/yaclients/: yaclients.py
bot_app/: admin.py  forms.py  models.py  views.py
bot_app/migrations/: 0001_initial.py  0002_loginuser_alter_statisticsget_standard.py  0002_statistics_user_name.py
bot_app/templates/: createstandards.html  createstatistics.html  index.html  login.html  profile.html  standards.html  standards_id.html  statistic_id.html  statistics.html
bot_app/templatetags/: extras.py
db/: db_profile.py  db_standards.py  db_users.py  router.py
docker/: bot_app.sh  web.sh
schedule/: training_session.py
src/: env.py
src/admin/: adm.py
src/auth/: login.py  signup.py
src/db/: db_profile.py  (+5 more)
srm/: srm_bot.py
stats/: top.py
tests/: login_tests.py  signup_tests.py
(+38 files in other folders)
