[tool.poetry]
name = "sport-club-bot"
version = "0.1.0"
description = ""
authors = ["iva <ivalulyanov1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
psycopg2 = "^2.9.9"
django = "^5.0.6"
djangorestframework = "^3.15.1"
yclients-api = "^0.0.7"
ujson = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
